# AI-Therapist

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/: .dockerignore  main.py  requirements.txt
backend/app/api/: routes.py  schemas.py
backend/app/core/: agent.py  config.py  prompts.py
backend/app/services/: database.py  emergency.py  location.py  therapy.py
frontend/: frontend.py
