[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "groq>=0.37.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "twilio>=9.9.0",
    "uvicorn>=0.40.0",
]
